# missingmcp

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  glama.json  nginx.conf.example  pyproject.toml  railway.json
.github/: FUNDING.yml
.github/workflows/: hourly-digest.yml
.scratch/oauth-client-lifecycle/: issue.md
.scratch/oura-adapter/: map.md
.scratch/oura-adapter/assets/: oura-api-v2-research.md
.scratch/oura-adapter/issues/: 01-oura-api-research.md  02-register-oura-dev-app.md  03-auth-model-decision.md  04-tool-set-decision.md  (+1 more)
.scratch/posthog-telemetry/: map.md
.scratch/slack-hourly-digest/: map.md
docs/adr/: 0001-retired-adapter-cleanup.md
docs/agents/: domain.md  triage-labels.md
scripts/: daily_report.py  gen_garmin_tools.py  gen_whoop_tools.py  health.py  hourly_digest.py  revoke.py  status.py  subscribers.py  usage.py
src/garmin_gateway/: app.py  config.py  garmin_login.py  oauth.py  proxy.py  security.py  store.py  workers.py
src/missingmcp/: app.py  backup.py  config.py  log.py  oauth.py  pages.py  proxy.py  report.py  security.py  store.py  telemetry.py  workers.py
tests/: conftest.py  test_adapters.py  test_app.py  test_backup.py  test_config.py  test_garmin_login.py  test_hourly_digest.py  test_local_forward.py  test_log.py  test_oauth.py  test_proxy.py  test_remote_forward.py  test_report.py  test_rohlik_forward.py  test_scripts.py  test_security.py  test_store.py  test_telemetry.py  test_whoop_api.py  test_whoop_e2e.py  test_whoop_mcp.py  test_workers.py
(+60 files in other folders)
