[project]
name = "missingmcp"
version = "0.1.0"
description = "MissingMCP — multi-user OAuth 2.1 gateway serving the connectors Claude is missing (Garmin via the unmodified garmin_mcp worker)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Vaclav Slajs", email = "vaclav@slajs.eu" }]
keywords = ["mcp", "missingmcp", "garmin", "oauth", "claude", "garmin-connect"]
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "garminconnect>=0.3.2",
    "cryptography>=42",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/VelkyVenik/missingmcp"
Repository = "https://github.com/VelkyVenik/missingmcp"
Issues = "https://github.com/VelkyVenik/missingmcp/issues"

[project.scripts]
missingmcp = "missingmcp.app:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/missingmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Upstream deprecation from newer Starlette: its TestClient warns about httpx vs
    # httpx2. We use httpx (>=0.27) directly in proxy.py at runtime and only touch
    # TestClient in tests, so this is not actionable here — keep test output pristine.
    "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]
